--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
 
         {% for r in history %}
 
-        <a href="/result?search={{ r[0] }}&search_type={{ r[2] }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" aria-current="true">
+        <a href="/result?search={{ r[0] }}&search_type={{ r[2] }}&page=1" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" aria-current="true">
             <h6>{{ r[0] }}</h6>
             <span class="badge bg-primary rounded-pill">{{ r[1] }}</span>
         </a>
